Enhance address form styling: adjust textarea size and input heights for better usability

--- a/address-form.html
+++ b/address-form.html
@@ -45,12 +45,12 @@
             <div class="col-12">
               <label for="address1" class="form-label">Address Line 1</label>
               <textarea class="form-control" id="address1" name="address1" rows="3"
-                placeholder="Street address, P.O. box, company name, c/o"></textarea>
+                placeholder="Street address, P.O. box, company name, c/o" style="resize: none;"></textarea>
             </div>
             <div class="col-12">
               <label for="address2" class="form-label">Address Line 2</label>
               <textarea class="form-control" id="address2" name="address2" rows="3"
-                placeholder="Apartment, suite, unit, building, floor, etc."></textarea>
+                placeholder="Apartment, suite, unit, building, floor, etc." style="resize: none;"></textarea>
             </div>
             <div class="col-12 text-end">
               <button type="button" class="btn btn-custom-submit mt-3 w-100 w-md-auto"
